下单，取消回滚测试通过